# multimodule-23

./: .gitignore  CMakeLists.txt  README.md  build-n-test.sh
source/: CMakeLists.txt
source/executable/: CMakeLists.txt  app.cpp
src/: main.cpp
